# tensorflow-starter-project

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
notebooks/: example.ipynb  examples.ipynb  nb_init.py  template.ipynb  test.ipynb
src/: app.py
src/common/: utils.py
